--- a/pages/index/app.html
+++ b/pages/index/app.html
@@ -12,19 +12,14 @@
             </h1>
         </div>
 
-        <img
-            src="./me.jpg"
-            alt="me"
-            width="200px"
-            class="rounded-lg float-right"
-        />
-
         <div class="text-wrap mb-20">
-            asdfasdjlfjkldskfjldksjfkldsja klasdjkf akld flk alkd kf ajdl fkja dflj
+            Hello, I'm studying physics and computer science.
+            On the side, I like to make cool little animations like these.
+            This site are just some of the stepping stones for larger projects.
+            Please do check it out.
         </div>
 
-        <div aria-label="Socials" className="flex flex-col space-y-4 w-fit min-w-fit">
-
+        <div aria-label="Socials" className="flex flex-row space-x-4 w-fit min-w-fit">
             <a href="https://www.youtube.com/@funnyscar" class="">
                 <svg
                     xmlns="http///www.w3.org/2000/svg"
@@ -100,6 +95,11 @@
                 </svg>
             </a>
 
+        </div>
+
+
+        <div>
+            
         </div>
     </div>
 </div>
