--- a/pages/3d/index.html
+++ b/pages/3d/index.html
@@ -8,7 +8,11 @@
             name="description"
             content="He is an undergraduate student at UCB with a great interest in Quantum Computing. Currently, doing research in Quantum Computing @ Berkeley. "
         />
-        <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/curtisjhu/bananaears/master/icons/favicon.ico">
+        <link
+            rel="icon"
+            type="image/x-icon"
+            href="https://raw.githubusercontent.com/curtisjhu/curtisjhu/master/icons/favicon.ico"
+        />
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
@@ -20,7 +24,7 @@
         />
         <meta
             property="og:image"
-            content="https://raw.githubusercontent.com/curtisjhu/bananaears/master/icons/logo.png"
+            content="https://raw.githubusercontent.com/curtisjhu/curtisjhu/master/icons/logo.png"
         />
 
         <!-- Twitter -->
@@ -33,17 +37,26 @@
         />
         <meta
             property="twitter:image"
-            content="https://raw.githubusercontent.com/curtisjhu/bananaears/master/icons/logo.png"
+            content="https://raw.githubusercontent.com/curtisjhu/curtisjhu/master/icons/logo.png"
         />
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+        
+        <script
+            type="text/javascript"
+            src="https://cdn.jsdelivr.net/npm/three@0.137.0/build/three.min.js"
+        ></script>
+        <script
+            type="text/javascript"
+            src="https://cdn.jsdelivr.net/npm/mathbox@latest/build/bundle/mathbox.js"
+        ></script>
+        <link
+            rel="stylesheet"
+            href="https://cdn.jsdelivr.net/npm/mathbox@latest/build/mathbox.css"
+        />
     </head>
     <body>
         <div id="app"></div>
-        <script>
-            $(function () {
-                $("#app").load("app.html");
-            });
-        </script>
+        <script src="bundle.js" type="module"></script>
     </body>
 </html>
