--- a/pages/3d/index.html
+++ b/pages/3d/index.html
@@ -8,11 +8,7 @@
             name="description"
             content="He is an undergraduate student at UCB with a great interest in Quantum Computing. Currently, doing research in Quantum Computing @ Berkeley. "
         />
-        <link
-            rel="icon"
-            type="image/x-icon"
-            href="https://raw.githubusercontent.com/curtisjhu/curtisjhu/master/icons/favicon.ico"
-        />
+        <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/curtisjhu/curtisjhu/master/icons/favicon.ico">
 
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
@@ -40,20 +36,6 @@
             content="https://raw.githubusercontent.com/curtisjhu/curtisjhu/master/icons/logo.png"
         />
 
-
-        
-        <script
-            type="text/javascript"
-            src="https://cdn.jsdelivr.net/npm/three@0.137.0/build/three.min.js"
-        ></script>
-        <script
-            type="text/javascript"
-            src="https://cdn.jsdelivr.net/npm/mathbox@latest/build/bundle/mathbox.js"
-        ></script>
-        <link
-            rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/mathbox@latest/build/mathbox.css"
-        />
     </head>
     <body>
         <div id="app"></div>
