3d prints works amazingly

--- a/pages/3d-prints/index.html
+++ b/pages/3d-prints/index.html
@@ -6,7 +6,7 @@
         <meta name="title" content="FunnyScar - Curtis Hu" />
         <meta
             name="description"
-            content="He is an undergraduate student at UCB with a great interest in Quantum Computing. Currently, doing research in Quantum Computing @ Berkeley. "
+            content="Hi! I'm an undergraduate student at UCB. Check me out on funnyscar.com "
         />
         <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/curtisjhu/curtisjhu/master/icons/favicon.ico">
 
@@ -16,7 +16,7 @@
         <meta property="og:title" content="FunnyScar - Curtis Hu" />
         <meta
             property="og:description"
-            content="He is an undergraduate student at UCB with a great interest in Quantum Computing. Currently, doing research in Quantum Computing @ Berkeley. "
+            content="Hi! I'm an undergraduate student at UCB. Check me out on funnyscar.com "
         />
         <meta
             property="og:image"
@@ -29,7 +29,7 @@
         <meta property="twitter:title" content="FunnyScar - Curtis Hu" />
         <meta
             property="twitter:description"
-            content="He is an undergraduate student at UCB with a great interest in Quantum Computing. Currently, doing research in Quantum Computing @ Berkeley. "
+            content="Hi! I'm an undergraduate student at UCB. Check me out on funnyscar.com "
         />
         <meta
             property="twitter:image"
