--- a/pages/nn/nn-logic-gates/index.html
+++ b/pages/nn/nn-logic-gates/index.html
@@ -43,6 +43,7 @@
             type="text/javascript"
             src="https://unpkg.com/vis-network/standalone/umd/vis-network.min.js"
         ></script>
+        <script src="../../dat.gui.min.js"></script>
         <script src="bundle.js" type="module"></script>
     </body>
 </html>
